<resources>
    <string name="app_name">Quake Report</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>

    <string name="no_internet">No internet connection</string>
    <string name="no_internet_desc">Swipe down to refresh the page</string>

    <string name="no_quake">No earthquakes found</string>
    <string name="no_quake_desc">Something went wrong</string>

    <string name="refresh">refresh</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent Descending</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time DESC</string>

    <!-- Label for order-by most recent ascending option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_ascending_label">Most Recent Ascending</string>
    <string name="settings_order_by_most_recent_ascending_value" translatable="false">time ASC</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude Descending</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude DESC</string>

    <!-- Label for order-by magnitude ascending option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_ascending_label">Magnitude Ascending</string>
    <string name="settings_order_by_magnitude_ascending_value" translatable="false">magnitude ASC</string>

    <!-- Strings For Limit [CHAR LIMIT=30] -->
    <string name="settings_limit_label">Limit</string>
    <string name="settings_limit_key" translatable="false">limit</string>
    <string name="settings_limit_default" translatable="false">20</string>


    <!--Handling Dark Mode -->
    <!-- Strings For Dark Mode Preference [CHAR LIMIT=30] -->
    <string name="settings_dark_mode_label">Night Mode</string>
    <string name="settings_dark_mode_key" translatable="false">dark_mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_not_available">Location Not Available</string>
    <string name="no_info">NO INFO</string>

    <string name="open_in_browser">Open in browser</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>

</resources>
