<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootViewCord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_down"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!--emptyview-->
    <RelativeLayout
        android:id="@+id/new_empty_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/empty_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_img"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/no_internet"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorEarthquake" />

        <TextView
            android:id="@+id/empty_txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_txt"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="4dp"
            android:text="@string/no_internet_desc"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_txt_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/refresh"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
